--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <modules>
     <module>model</module>
     <module>rest-app</module>
+    <module>service</module>
   </modules>
 
   <parent>
@@ -26,6 +27,9 @@
   <properties>
     <java.version>1.8</java.version>
     <spring.boot.version>2.4.5</spring.boot.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencyManagement>
@@ -34,6 +38,11 @@
       <dependency>
         <groupId>by.byportal</groupId>
         <artifactId>model</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>by.byportal</groupId>
+        <artifactId>service</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
