--- a/rest-app/pom.xml
+++ b/rest-app/pom.xml
@@ -4,10 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <name>rest-app</name>
   <groupId>by.byportal</groupId>
   <artifactId>rest-app</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>rest-app</name>
+  <packaging>jar</packaging>
 
   <parent>
     <groupId>by.byportal</groupId>
@@ -15,21 +16,19 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
-
   <dependencies>
+    <dependency>
+      <groupId>by.byportal</groupId>
+      <artifactId>model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>by.byportal</groupId>
+      <artifactId>service</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>by.byportal</groupId>
-      <artifactId>model</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
