--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>model</name>
+  <name>service</name>
   <groupId>by.byportal</groupId>
-  <artifactId>model</artifactId>
+  <artifactId>service</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <parent>
@@ -16,6 +16,11 @@
   </parent>
 
   <dependencies>
+    <dependency>
+      <groupId>by.byportal</groupId>
+      <artifactId>model</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
