DAO layer added and fulfilled, but employeeRepository AUTOWIRE error

--- a/rest-app/pom.xml
+++ b/rest-app/pom.xml
@@ -23,7 +23,7 @@
     </dependency>
     <dependency>
       <groupId>by.byportal</groupId>
-      <artifactId>service</artifactId>
+      <artifactId>dao</artifactId>
     </dependency>
 
     <dependency>
