--- a/model/pom.xml
+++ b/model/pom.xml
@@ -5,7 +5,6 @@
   <modelVersion>4.0.0</modelVersion>
 
   <name>model</name>
-  <groupId>by.byportal</groupId>
   <artifactId>model</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -16,6 +15,10 @@
   </parent>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
