--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
         <artifactId>rest-app</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>by.byportal</groupId>
+        <artifactId>dao</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
 
       <!--Other dependencies-->
       <dependency>
@@ -54,6 +59,11 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <version>${spring.boot.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.2.10</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
