--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.4.5</version>
-    <relativePath/> <!-- lookup parent from repository ___________ -->
+    <relativePath/> <!-- lookup parent from repository ___________55555 -->
   </parent>
 
   <groupId>by.byportal</groupId>
