--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,17 @@
     <module>model</module>
     <module>rest-app</module>
     <module>dao</module>
-  </modules>
+    <module>web-app</module>
 
-  <parent>
+  </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+    </dependencies>
+
+    <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.4.5</version>
@@ -64,6 +72,11 @@
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>42.2.10</version>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.20</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
