--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
         <artifactId>dao</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
-
+      <dependency>
+        <groupId>by.byportal</groupId>
+        <artifactId>web-app</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
       <!--Other dependencies-->
       <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -78,6 +82,11 @@
         <artifactId>lombok</artifactId>
         <version>1.18.20</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
