--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <name>web-app</name>
+    <groupId>by.byportal</groupId>
+    <artifactId>web-app</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <parent>
         <artifactId>byportal</artifactId>
         <groupId>by.byportal</groupId>
@@ -9,7 +14,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web-app</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
