--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
-        <version>2.4.5</version>
+        <version>${spring.boot.version}</version>
       </dependency>
 
     </dependencies>
