--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <module>rest-app</module>
     <module>dao</module>
     <module>web-app</module>
+    <module>sshwa</module>
 
   </modules>
     <dependencies>
@@ -88,6 +89,57 @@
         <version>${spring.boot.version}</version>
       </dependency>
 
+      <!--sshwa START-->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>jsp-api</artifactId>
+        <version>2.2</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.0.5.RELEASE</version>
+        <type>jar</type>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>4.0.5.RELEASE</version>
+        <type>jar</type>
+      </dependency>
+      <!-- Add Spring Security -->
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>3.2.4.RELEASE</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>3.2.4.RELEASE</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>3.2.4.RELEASE</version>
+      </dependency>
+      <!-- Add Jstl Dependencies -->
+      <dependency>
+        <groupId>org.apache.taglibs</groupId>
+        <artifactId>taglibs-standard-jstlel</artifactId>
+        <version>1.2.1</version>
+      </dependency>
+      <!--sshwa FINISH-->
+
     </dependencies>
   </dependencyManagement>
 
@@ -112,6 +164,25 @@
           </execution>
         </executions>
       </plugin>
+      <!--sshwa START-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+      <!--sshwa FINISH-->
     </plugins>
     </pluginManagement>
   </build>
