--- a/rest-app/src/main/resources/application.properties
+++ b/rest-app/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 #REST port
 server.port=8090
 
-spring.datasource.url=jdbc:postgresql://192.168.3.224:5432/byportal
-spring.datasource.username=root
-spring.datasource.password=123
+#spring.datasource.url=jdbc:postgresql://192.168.3.224:5432/byportal
+#spring.datasource.username=root
+#spring.datasource.password=123
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/byportbase?useUnicode=true&serverTimezone=UTC
+spring.datasource.username=mysql
+spring.datasource.password=mysql
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+#spring.jpa.database=postgresql
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
